# Lobster

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  DIVERGENCE.md  EXPLORATION_COMPLETE.txt  EXPLORATION_FINDINGS.md  ONBOARDING.md  PRD.md  README.md  UPGRADE.md  WHATSNEW  install.sh  pyproject.toml  setup.sh
.claude/: compact-ack-messages.json  dispatcher.bootup.md  dispatcher.md  subagent.bootup.md  subagent.md  sys.compact-dispatcher.bootup.md  sys.debug.bootup.md  sys.debug.dispatcher.bootup.md  sys.dispatcher.bootup.md  sys.dispatcher.bootup.reference.md  sys.dispatcher.md  sys.dispatcher.on-demand.md  sys.subagent.bootup.md  sys.subagent.md
.githooks/: post-merge  pre-commit  pre-push  security-allowlist.txt
.github/: LIFECYCLE.md  pull_request_template.md
agents/: eloso-deployer.md
lobster-shop/multiplayer-telegram-bot/: README.md  install.sh  pyproject.toml  skill.toml
lobster-shop/multiplayer-telegram-bot/behavior/: system.md
lobster-shop/multiplayer-telegram-bot/context/: architecture.md
lobster-shop/multiplayer-telegram-bot/preferences/: defaults.toml  schema.toml
lobster-shop/multiplayer-telegram-bot/src/multiplayer_telegram_bot/: __init__.py  commands.py  gating.py  registration.py  router.py  session.py  whitelist.py
lobster-shop/multiplayer-telegram-bot/src/multiplayer_telegram_bot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lobster-shop/multiplayer-telegram-bot/tests/: test_commands.py  test_gating.py  test_gating_invocation.py  test_integration.py  test_registration.py  test_router.py  test_session.py  test_whitelist.py
(+1573 files in other folders)
